# usando-poetry

./: mkdocs.yml  pyproject.toml  requirements.txt
docs/: index.md
