[tool.poetry]
name = "usando-poetry"
version = "0.1.0"
description = ""
authors = ["McSilva <microrepar@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.26.0"
streamlit = "^1.31.1"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0,<8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
